--- a/src/assets/temp.styl
+++ b/src/assets/temp.styl
@@ -26,22 +26,21 @@ img
 
 main
 	padding 50px 10px
-	overflow-x auto
-	overflow-y hidden
+	overflow-x hidden
+	overflow-y auto
 	height 100%
 	white-space nowrap
 	clearfix()
 .desk, .desk-placeholder, .desk-placeholder:hover
-	width 270px
-	display inline-block
-	height 100%
+	//display inline-block
+	height 270px
 	overflow hidden
 	min-height 100px
 	background-color #e2e4e6
 	box-shadow 1px 1px 1px rgba(0,0,0,.5)
 	border-radius 3px
 	padding-bottom 20px
-	margin-right 20px
+	margin 10px 0
 	vertical-align top
 	.desk-head
 		position relative
@@ -53,8 +52,8 @@ main
 			white-space normal
 			width 100%
 .desk-items
-	overflow-y auto
-	height 100%
+	overflow-x auto
+	//height 100%
 	padding-bottom 20px
 	.placeholder, .placeholder:hover
 		height 161px
