--- a/src/assets/temp.styl
+++ b/src/assets/temp.styl
@@ -14,6 +14,7 @@ body
 	background-color rgb(0, 121, 191)
 	position relative
 	height 100%
+  	width: 100%
 	padding 0
 	margin 0
 	clearfix()
@@ -26,13 +27,13 @@ img
 
 main
 	padding 50px 10px
-	overflow-x hidden
-	overflow-y auto
 	height 100%
+	width: 100%
 	white-space nowrap
 	clearfix()
 .desk, .desk-placeholder, .desk-placeholder:hover
 	//display inline-block
+	width: 100%
 	height 270px
 	overflow hidden
 	min-height 100px
@@ -52,14 +53,22 @@ main
 			white-space normal
 			width 100%
 .desk-items
+	padding 20px
+	width: 100%
 	overflow-x auto
-	//height 100%
-	padding-bottom 20px
 	.placeholder, .placeholder:hover
 		height 161px
 		background-color rgba(208,208,208,1)
+
+.draggable-card
+	width 200px
+	float left
+	margin-right 10px
+	border solid 1px
+	overflow hidden
 .item
-	width 90%
+	//width 90%
+  	width 200px
 	margin 0 auto 10px
 	background #fff
 	min-height 100px
