--- a/src/assets/temp.styl
+++ b/src/assets/temp.styl
@@ -34,13 +34,13 @@ main
 .desk, .desk-placeholder, .desk-placeholder:hover
     //display inline-block
     width: 100%
-    height 270px
+    min-width: 100%
     overflow hidden
-    min-height 100px
+    height 240px
+    min-height 240px
     background-color #e2e4e6
     box-shadow 1px 1px 1px rgba(0,0,0,.5)
     border-radius 3px
-    padding-bottom 20px
     margin 10px 0
     vertical-align top
     .desk-head
@@ -54,78 +54,81 @@ main
             width 100%
 .desk-items
     padding 20px
+    height 100%
     width: 100%
-    overflow-x auto
+    overflow-x scroll
+    white-space nowrap
     .placeholder, .placeholder:hover
         height 161px
         background-color rgba(208,208,208,1)
 
-.draggable-card
-    width 200px
-    float left
-    margin-right 10px
-    border solid 1px
-    overflow hidden
-.item
-    //width 90%
-    width 200px
-    margin 0 auto 10px
-    background #fff
-    min-height 100px
-    border-radius 5px
-    box-shadow 1px 1px 1px rgba(0,0,0,.3)
-    transition 0.15s
-    cursor pointer
-    &:hover
-        background #f7f7f7
-    .item-name
-        padding 5px 10px
-        border-bottom 1px solid #dbdbdb
-        white-space normal
-        word-break break-all
-        word-wrap break-world
-    .item-container
-        padding 10px
-        border-bottom 1px solid #dbdbdb
-        clearfix()
-        .item-avatar-wrap
-            width 70px
-            float left
-            margin-bottom 5px
-            img
-                width 50px
-                height 50px
-                display block
-                margin 0 auto
-                border-radius 50%
-                border 1px solid #dbdbdb
-        .item-content
-            white-space normal
-            .item-author
-                font-size 16px
-                font-weight bolder
-            p
-                margin 5px 0
-    .item-perfomers
-        clearfix()
-        padding 5px 10px
-        .add-perfomers
-            float left
-        .delete-perfomers
-            float right
-        .add-perfomers,
-        .delete-perfomers
-            a
-                display block
-                float left
-                margin-right 3px
-                img
-                    width 15px
-                    height 15px
-            .perfomer
-                float left
-                img
-                    display block
-                    width 15px
-                    height 15px
-                    border-radius 50%
+  .draggable-card
+      width 200px
+      height 180px
+      margin-right 10px
+      border solid 1px
+      overflow hidden
+      display inline-block
+  .item
+      //width 90%
+      width 200px
+      margin 0 auto 10px
+      background #fff
+      min-height 100px
+      border-radius 5px
+      box-shadow 1px 1px 1px rgba(0,0,0,.3)
+      transition 0.15s
+      cursor pointer
+      &:hover
+          background #f7f7f7
+      //.item-name
+      //    padding 5px 10px
+      //    border-bottom 1px solid #dbdbdb
+      //    white-space normal
+      //    word-break break-all
+      //    word-wrap break-world
+      //.item-container
+      //    padding 10px
+      //    border-bottom 1px solid #dbdbdb
+      //    clearfix()
+      //    .item-avatar-wrap
+      //        width 70px
+      //        float left
+      //        margin-bottom 5px
+      //        img
+      //            width 50px
+      //            height 50px
+      //            display block
+      //            margin 0 auto
+      //            border-radius 50%
+      //            border 1px solid #dbdbdb
+      //    .item-content
+      //        white-space normal
+      //        .item-author
+      //            font-size 16px
+      //            font-weight bolder
+      //        p
+      //            margin 5px 0
+      //.item-perfomers
+      //    clearfix()
+      //    padding 5px 10px
+      //    .add-perfomers
+      //        float left
+      //    .delete-perfomers
+      //        float right
+      //    .add-perfomers,
+      //    .delete-perfomers
+      //        a
+      //            display block
+      //            float left
+      //            margin-right 3px
+      //            img
+      //                width 15px
+      //                height 15px
+      //        .perfomer
+      //            float left
+      //            img
+      //                display block
+      //                width 15px
+      //                height 15px
+      //                border-radius 50%
