scroll top is working

--- a/src/assets/temp.styl
+++ b/src/assets/temp.styl
@@ -36,8 +36,8 @@ main
     width: 100%
     min-width: 100%
     overflow hidden
-    height 240px
-    min-height 240px
+    height 150px
+    min-height 150px
     background-color #e2e4e6
     box-shadow 1px 1px 1px rgba(0,0,0,.5)
     border-radius 3px
@@ -56,7 +56,8 @@ main
     padding 20px
     height 100%
     width: 100%
-    overflow-x scroll
+    overflow-x auto
+    overflow-y hidden
     white-space nowrap
     .placeholder, .placeholder:hover
         height 161px
@@ -64,7 +65,7 @@ main
 
   .draggable-card
       width 200px
-      height 180px
+      height 120px
       margin-right 10px
       border solid 1px
       overflow hidden
@@ -81,54 +82,54 @@ main
       cursor pointer
       &:hover
           background #f7f7f7
-      //.item-name
-      //    padding 5px 10px
-      //    border-bottom 1px solid #dbdbdb
-      //    white-space normal
-      //    word-break break-all
-      //    word-wrap break-world
-      //.item-container
-      //    padding 10px
-      //    border-bottom 1px solid #dbdbdb
-      //    clearfix()
-      //    .item-avatar-wrap
-      //        width 70px
-      //        float left
-      //        margin-bottom 5px
-      //        img
-      //            width 50px
-      //            height 50px
-      //            display block
-      //            margin 0 auto
-      //            border-radius 50%
-      //            border 1px solid #dbdbdb
-      //    .item-content
-      //        white-space normal
-      //        .item-author
-      //            font-size 16px
-      //            font-weight bolder
-      //        p
-      //            margin 5px 0
-      //.item-perfomers
-      //    clearfix()
-      //    padding 5px 10px
-      //    .add-perfomers
-      //        float left
-      //    .delete-perfomers
-      //        float right
-      //    .add-perfomers,
-      //    .delete-perfomers
-      //        a
-      //            display block
-      //            float left
-      //            margin-right 3px
-      //            img
-      //                width 15px
-      //                height 15px
-      //        .perfomer
-      //            float left
-      //            img
-      //                display block
-      //                width 15px
-      //                height 15px
-      //                border-radius 50%
+      .item-name
+          padding 5px 10px
+          border-bottom 1px solid #dbdbdb
+          white-space normal
+          word-break break-all
+          word-wrap break-world
+      .item-container
+          padding 10px
+          border-bottom 1px solid #dbdbdb
+          clearfix()
+          .item-avatar-wrap
+              width 70px
+              float left
+              margin-bottom 5px
+              img
+                  width 50px
+                  height 50px
+                  display block
+                  margin 0 auto
+                  border-radius 50%
+                  border 1px solid #dbdbdb
+          .item-content
+              white-space normal
+              .item-author
+                  font-size 16px
+                  font-weight bolder
+              p
+                  margin 5px 0
+      .item-perfomers
+          clearfix()
+          padding 5px 10px
+          .add-perfomers
+              float left
+          .delete-perfomers
+              float right
+          .add-perfomers,
+          .delete-perfomers
+              a
+                  display block
+                  float left
+                  margin-right 3px
+                  img
+                      width 15px
+                      height 15px
+              .perfomer
+                  float left
+                  img
+                      display block
+                      width 15px
+                      height 15px
+                      border-radius 50%
