--- a/src/assets/temp.styl
+++ b/src/assets/temp.styl
@@ -31,12 +31,13 @@ main
     width: 100%
     white-space nowrap
     clearfix()
+
 .desk, .desk-placeholder, .desk-placeholder:hover
     //display inline-block
     width: 100%
     min-width: 100%
     overflow hidden
-    min-height 150px
+    min-height 164px
     background-color #e2e4e6
     box-shadow 1px 1px 1px rgba(0,0,0,.5)
     border-radius 3px
@@ -52,82 +53,82 @@ main
             white-space normal
             width 100%
 .desk-items
-    padding 20px
-    width: 100%
-    overflow-x auto
-    overflow-y hidden
-    white-space nowrap
-    .placeholder, .placeholder:hover
-        height 161px
-        background-color rgba(208,208,208,1)
+  padding 20px
+  width: 100%
+  min-height inherit
+  overflow-x auto
+  overflow-y hidden
+  white-space nowrap
 
-  .draggable-card
-      width 200px
-      height 120px
-      margin-right 10px
-      border solid 1px
-      overflow hidden
-      display inline-block
-  .item
-      //width 90%
-      width 200px
-      margin 0 auto 10px
-      background #fff
-      min-height 100px
-      border-radius 5px
-      box-shadow 1px 1px 1px rgba(0,0,0,.3)
-      transition 0.15s
-      cursor pointer
-      &:hover
-          background #f7f7f7
-      .item-name
-          padding 5px 10px
-          border-bottom 1px solid #dbdbdb
+.draggable-card, .placeholder
+  display inline-block
+
+.placeholder, .placeholder:hover
+  background-color rgba(208,208,208,1)
+
+.item
+  margin-right 10px
+  overflow hidden
+  border solid 1px
+  height 150px
+  width 200px
+  min-width 200px
+  background #fff
+  min-height 100px
+  border-radius 5px
+  box-shadow 1px 1px 1px rgba(0,0,0,.3)
+  transition 0.15s
+  cursor pointer
+  &:hover
+      background #f7f7f7
+  .item-name
+      padding 5px 10px
+      border-bottom 1px solid #dbdbdb
+      white-space normal
+      word-break break-all
+      word-wrap break-world
+  .item-container
+      padding 10px
+      border-bottom 1px solid #dbdbdb
+      clearfix()
+      .item-avatar-wrap
+          width 70px
+          float left
+          margin-bottom 5px
+          img
+              width 50px
+              height 50px
+              display block
+              margin 0 auto
+              border-radius 50%
+              border 1px solid #dbdbdb
+      .item-content
           white-space normal
-          word-break break-all
-          word-wrap break-world
-      .item-container
-          padding 10px
-          border-bottom 1px solid #dbdbdb
-          clearfix()
-          .item-avatar-wrap
-              width 70px
+          .item-author
+              font-size 16px
+              font-weight bolder
+          p
+              margin 5px 0
+  .item-perfomers
+      clearfix()
+      padding 5px 10px
+      .add-perfomers
+          float left
+      .delete-perfomers
+          float right
+      .add-perfomers,
+      .delete-perfomers
+          a
+              display block
               float left
-              margin-bottom 5px
+              margin-right 3px
               img
-                  width 50px
-                  height 50px
-                  display block
-                  margin 0 auto
-                  border-radius 50%
-                  border 1px solid #dbdbdb
-          .item-content
-              white-space normal
-              .item-author
-                  font-size 16px
-                  font-weight bolder
-              p
-                  margin 5px 0
-      .item-perfomers
-          clearfix()
-          padding 5px 10px
-          .add-perfomers
+                  width 15px
+                  height 15px
+          .perfomer
               float left
-          .delete-perfomers
-              float right
-          .add-perfomers,
-          .delete-perfomers
-              a
+              img
                   display block
-                  float left
-                  margin-right 3px
-                  img
-                      width 15px
-                      height 15px
-              .perfomer
-                  float left
-                  img
-                      display block
-                      width 15px
-                      height 15px
-                      border-radius 50%
+                  width 15px
+                  height 15px
+                  border-radius 50%
